# days-since

./: Makefile  README.md  days-since.cabal  stack.yaml
src/: AppCmd.hs  Main.hs
