name:                days-since
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/days-since#readme
license:             BSD3
license-file:        LICENSE
author:              Alexandru Nedelcu
maintainer:          noreply@alexn.org
copyright:           2018 Alexandru Nedelcu
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable days-since
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  --ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , time

